fixed spacing issue

--- a/src/Components/Search/search.css
+++ b/src/Components/Search/search.css
@@ -1,5 +1,6 @@
 /* background color? */
 /* tv frame border? tv glow outside border? */
+/* merge container and monitor */
 
 #container {
     display: flex;
@@ -48,7 +49,7 @@
 }
 
 #search-score-table {
+    margin: 0;
     border-collapse: collapse;
     color: yellow;
-
 }
